# vumi-whatsapp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  ci.yaml
loadtest/: locustfile.py
vxwhatsapp/: auth.py  claims.py  config.py  consumer.py  main.py  metrics.py  models.py  publisher.py  schema.py  utils.py  whatsapp.py
vxwhatsapp/tests/: test_claims.py  test_consumer.py  test_main.py  test_models.py  test_publisher.py  test_schema.py  test_utils.py  test_whatsapp.py  utils.py
