[tool.poetry]
name = "vxwhatsapp"
version = "0.1.0"
description = "A WhatsApp transport for Vumi"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/praekeltfoundation/vumi-whatsapp"
repository = "https://github.com/praekeltfoundation/vumi-whatsapp"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "~20.12"
sentry-sdk = "^0.19.5"
prometheus-client = "^0.9.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"
pytest-sanic = "^1.6.2"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
