[tool.poetry]
name = "vxwhatsapp"
version = "0.1.0"
description = "A WhatsApp transport for Vumi"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/praekeltfoundation/vumi-whatsapp"
repository = "https://github.com/praekeltfoundation/vumi-whatsapp"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "~21.12"
sentry-sdk = "^1.14.0"
prometheus-client = "^0.9.0"
jsonschema = "^3.2.0"
aio-pika = "^6.7.1"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
redis = "^4.4.4"
websockets = "10.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=vxwhatsapp"
filterwarnings = [
    "error::UserWarning:_pytest",  # For PytestUnhandledCoroutineWarning
    "error::DeprecationWarning",
    # Various things pass a deprecated loop arg, presumably for python 3.7
    "default::DeprecationWarning:pytest_asyncio",
    "default::DeprecationWarning:sanic.server:556",
    "default::DeprecationWarning:sanic.server.runners:133",
    "default::DeprecationWarning:asyncio.streams",
]
